Rename service from Hello to Torrent

--- a/dev-resources/config.conf
+++ b/dev-resources/config.conf
@@ -4,5 +4,5 @@ webserver: {
 }
 
 web-router-service: {
-    "puppetlabs.torrent-server-web-service/hello-web-service": "/hello"
+    "puppetlabs.torrent-server-web-service/torrent-web-service": "/torrent"
 }
