Use config file, handle errors

--- a/dev-resources/config.conf
+++ b/dev-resources/config.conf
@@ -6,3 +6,8 @@ webserver: {
 web-router-service: {
     "puppetlabs.torrent-server-web-service/torrent-web-service": "/torrent"
 }
+
+torrent-server: {
+    file-source: dev-resources
+    tracker-port: 6968
+}
